force-app/main/default/objects/Client_Utility_Account_Subscription__c/Client_Utility_Account_Subscription__c.object-meta.xml
<CustomObject>
    <description>Sister object to utility account subscription, used in client reporting</description>
    <label>Client Utility Account Subscription</label>
    <nameField>
        <label>Client Utility Account Subscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Utility Account Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>