force-app/main/default/objects/Client_Utility_Account_Subscription__c/fields/Agreement_Activated_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Activated_Date__c</fullName>
    <formula>IF(NOT(ISNULL(Utility_Account_Subscription__r.Opportunity__r.Contract.Assignment_Agreement__c)), 
Utility_Account_Subscription__r.Opportunity__r.Contract.Assignment_Agreement__r.ActivatedDate, 
IF(NOT(ISNULL(Utility_Account_Subscription__r.Opportunity__r.Assignment_Agreement__c)), 
Utility_Account_Subscription__r.Opportunity__r.Assignment_Agreement__r.ActivatedDate, 
null))</formula>
    <label>Agreement Activated Date</label>
    <type>DateTime</type>
</CustomField>