force-app/main/default/objects/Client_Utility_Account_Subscription__c/fields/Agreement_Client_Entity__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Client_Entity__c</fullName>
    <formula>IF(NOT(ISNULL(Utility_Account_Subscription__r.Opportunity__r.Contract.Assignment_Agreement__c)), 
Utility_Account_Subscription__r.Opportunity__r.Contract.Assignment_Agreement__r.BlueWave_Entity__c, 
IF(NOT(ISNULL(Utility_Account_Subscription__r.Opportunity__r.Assignment_Agreement__c)), 
Utility_Account_Subscription__r.Opportunity__r.Assignment_Agreement__r.BlueWave_Entity__c, 
null))</formula>
    <label>Agreement Client Entity</label>
    <type>Text</type>
</CustomField>