force-app/main/default/objects/Client_Utility_Account_Subscription__c/fields/Annual_kWh__c.field-meta.xml
<CustomField>
    <fullName>Annual_kWh__c</fullName>
    <formula>Utility_Account_Subscription__r.Utility_Account_Log__r.Annual_kWh__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual kWh</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>