force-app/main/default/objects/Client_Utility_Account_Subscription__c/fields/Annual_Subscription_Production_Summary__c.field-meta.xml
<CustomField>
    <fullName>Annual_Subscription_Production_Summary__c</fullName>
    <formula>Utility_Account_Subscription__r.Annual_Subscription_Production_Summary__c</formula>
    <label>Annual Subscription Production Summary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>