force-app/main/default/objects/Client_Utility_Account_Subscription__c/fields/Autopay__c.field-meta.xml
<CustomField>
    <fullName>Autopay__c</fullName>
    <formula>Utility_Account_Subscription__r.Opportunity__r.Account.Recurring_Billing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Autopay</label>
    <type>Checkbox</type>
</CustomField>