force-app/main/default/objects/Client_Utility_Account_Subscription__c/fields/Average_kW_Demand__c.field-meta.xml
<CustomField>
    <fullName>Average_kW_Demand__c</fullName>
    <formula>Utility_Account_Subscription__r.Utility_Account_Log__r.Average_Demand__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average kW Demand</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>