force-app/main/default/objects/Client_Utility_Account_Subscription__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <formula>Utility_Account_Subscription__r.Opportunity__r.Account.Cancellation_Reason_External__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancellation Reason</label>
    <type>Text</type>
</CustomField>