force-app/main/default/objects/Client_Utility_Account_Subscription__c/fields/Cancellation_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Request_Date__c</fullName>
    <formula>Utility_Account_Subscription__r.Opportunity__r.Account.Cancellation_Request_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancellation Request Date</label>
    <type>Date</type>
</CustomField>