force-app/main/default/objects/Client_Utility_Account_Subscription__c/fields/Contract_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Close_Date__c</fullName>
    <formula>Utility_Account_Subscription__r.Opportunity__r.Contract_Close_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Close Date</label>
    <type>Date</type>
</CustomField>