force-app/main/default/objects/Client_Utility_Account_Subscription__c/fields/CS_Account__c.field-meta.xml
<CustomField>
    <fullName>CS_Account__c</fullName>
    <formula>Utility_Account_Subscription__r.Opportunity__r.Account.Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CS Account #</label>
    <type>Text</type>
</CustomField>