force-app/main/default/objects/Client_Utility_Account_Subscription__c/fields/CS_Status__c.field-meta.xml
<CustomField>
    <fullName>CS_Status__c</fullName>
    <formula>text( Utility_Account_Subscription__r.Opportunity__r.Account.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CS Status</label>
    <type>Text</type>
</CustomField>