force-app/main/default/objects/Client_Utility_Account_Subscription__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <description>Opportunity Name</description>
    <formula>Utility_Account_Subscription__r.Opportunity__r.Name</formula>
    <label>Customer</label>
    <type>Text</type>
</CustomField>