force-app/main/default/objects/Client_Utility_Account_Subscription__c/fields/Customer_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Billing_Address__c</fullName>
    <formula>Utility_Account_Subscription__r.Opportunity__r.Account.BillingStreet &amp; BR() &amp;
Utility_Account_Subscription__r.Opportunity__r.Account.BillingCity &amp; &quot;, &quot; &amp;
Utility_Account_Subscription__r.Opportunity__r.Account.BillingState &amp; &quot; &quot; &amp;
Utility_Account_Subscription__r.Opportunity__r.Account.BillingPostalCode &amp; BR() &amp;
Utility_Account_Subscription__r.Opportunity__r.Account.BillingCountry</formula>
    <label>Customer Billing Address</label>
    <type>Text</type>
</CustomField>