force-app/main/default/objects/Client_Utility_Account_Subscription__c/fields/Customer_Group__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group__c</fullName>
    <formula>text(Utility_Account_Subscription__r.Opportunity__r.Customer_Group__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Group</label>
    <type>Text</type>
</CustomField>