force-app/main/default/objects/Client_Utility_Account_Subscription__c/fields/Customer_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Customer_Payment_Method__c</fullName>
    <formula>Utility_Account_Subscription__r.Opportunity__r.Account.Billing_Account__r.Zuora__PaymentMethod_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Payment Method</label>
    <type>Text</type>
</CustomField>