force-app/main/default/objects/Client_Utility_Account_Subscription__c/fields/Customer_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Phone_Number__c</fullName>
    <formula>Utility_Account_Subscription__r.Opportunity__r.Account.Send_Bills_Contact__r.Phone</formula>
    <label>Customer Phone Number</label>
    <type>Text</type>
</CustomField>