force-app/main/default/objects/Client_Utility_Account_Subscription__c/fields/Customer_Utility_Company__c.field-meta.xml
<CustomField>
    <fullName>Customer_Utility_Company__c</fullName>
    <formula>Utility_Account_Subscription__r.Utility_Account_Log__r.Utility_lookup__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Utility Company</label>
    <type>Text</type>
</CustomField>