force-app/main/default/objects/Client_Utility_Account_Subscription__c/fields/Date_Removed_From_Project__c.field-meta.xml
<CustomField>
    <fullName>Date_Removed_From_Project__c</fullName>
    <formula>Utility_Account_Subscription__r.Date_Removed_from_Project__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date that the last allocation schedule involving this customer was retired by the utility</inlineHelpText>
    <label>Date Removed From Project</label>
    <type>Date</type>
</CustomField>