force-app/main/default/objects/Client_Utility_Account_Subscription__c/fields/Entity_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Entity_Assignment__c</fullName>
    <formula>Utility_Account_Subscription__r.Entity_Assignment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Legal entity customer is subscribed to</inlineHelpText>
    <label>Entity Assignment</label>
    <type>Text</type>
</CustomField>