force-app/main/default/objects/Client_Utility_Account_Subscription__c/fields/Exclude_from_Demand_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Demand_Capacity__c</fullName>
    <formula>Utility_Account_Subscription__r.Utility_Account_Log__r.Exclude_from_Demand_Capacity__c</formula>
    <inlineHelpText>When checked, this customer utility account is not included in demand capacity for a SSS due to an exemption for residential load for mass meter exceptions.</inlineHelpText>
    <label>Exclude from Demand Capacity</label>
    <type>Checkbox</type>
</CustomField>