force-app/main/default/objects/Client_Utility_Account_Subscription__c/fields/FICO_score__c.field-meta.xml
<CustomField>
    <fullName>FICO_score__c</fullName>
    <formula>Utility_Account_Subscription__r.Opportunity__r.FICO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FICO score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>