force-app/main/default/objects/Client_Utility_Account_Subscription__c/fields/Finaled__c.field-meta.xml
<CustomField>
    <fullName>Finaled__c</fullName>
    <formula>Utility_Account_Subscription__r.Finaled__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is the customer&apos;s utility account closed?</inlineHelpText>
    <label>Finaled</label>
    <type>Checkbox</type>
</CustomField>