force-app/main/default/objects/Client_Utility_Account_Subscription__c/fields/Future_Customer_Subscription_KW_DC__c.field-meta.xml
<CustomField>
    <fullName>Future_Customer_Subscription_KW_DC__c</fullName>
    <formula>Utility_Account_Subscription__r.Future_Customer_Subscription_KWDC_Rollup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Customer&apos;s kW subscription for next allocation schedule</inlineHelpText>
    <label>Future Customer Subscription (KW DC)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>