force-app/main/default/objects/Client_Utility_Account_Subscription__c/fields/Future_Share_of_System__c.field-meta.xml
<CustomField>
    <fullName>Future_Share_of_System__c</fullName>
    <formula>Utility_Account_Subscription__r.Future_Share_of_System_Rollup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Customer&apos;s subscription % for next allocation schedule</inlineHelpText>
    <label>Future Share of System</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>