force-app/main/default/objects/Client_Utility_Account_Subscription__c/fields/Maximum_Subscription_Capacity_kW_DC__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Subscription_Capacity_kW_DC__c</fullName>
    <formula>Utility_Account_Subscription__r.Max_Subscription_Capacity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Maximum subscription allowed per program rules</inlineHelpText>
    <label>Maximum Subscription Capacity (kW DC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>