force-app/main/default/objects/Client_Utility_Account_Subscription__c/fields/Most_Recent_Enacted_kW_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Enacted_kW_Allocation__c</fullName>
    <description>This numeric formula field pulls kW allocation data from the UAS&apos;s most recently enacted ALSS.</description>
    <formula>Utility_Account_Subscription__r.Most_Recent_Enacted_ALSS__r.kW_Allocation__c</formula>
    <inlineHelpText>This numeric formula field pulls kW allocation data from the UAS&apos;s most recently enacted ALSS.</inlineHelpText>
    <label>Most Recent Enacted kW Allocation</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>