force-app/main/default/objects/Client_Utility_Account_Subscription__c/fields/Most_Recent_Enacted_Percent_Share__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Enacted_Percent_Share__c</fullName>
    <description>This percentage formula field pulls Percent Share data from the UAS&apos;s most recently enacted ALSS.</description>
    <formula>Utility_Account_Subscription__r.Most_Recent_Enacted_ALSS__r.Percent_Share__c</formula>
    <inlineHelpText>This percentage formula field pulls Percent Share data from the UAS&apos;s most recently enacted ALSS.</inlineHelpText>
    <label>Most Recent Enacted Percent Share</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>