force-app/main/default/objects/Client_Utility_Account_Subscription__c/fields/Next_Allocation_Schedule_Status__c.field-meta.xml
<CustomField>
    <fullName>Next_Allocation_Schedule_Status__c</fullName>
    <description>If Inactive, customer will be removed from the next allocation schedule</description>
    <formula>TEXT(Utility_Account_Subscription__r.Next_Schedule_Z_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Allocation Schedule Status</label>
    <type>Text</type>
</CustomField>