force-app/main/default/objects/Client_Utility_Account_Subscription__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <formula>Utility_Account_Subscription__r.Opportunity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Customer Name</inlineHelpText>
    <label>Opportunity</label>
    <type>Text</type>
</CustomField>