force-app/main/default/objects/Client_Utility_Account_Subscription__c/fields/Rate_Class__c.field-meta.xml
<CustomField>
    <fullName>Rate_Class__c</fullName>
    <formula>Utility_Account_Subscription__r.Utility_Account_Log__r.Utility_Rate_Class__r.Name</formula>
    <label>Rate Class</label>
    <type>Text</type>
</CustomField>