force-app/main/default/objects/Client_Utility_Account_Subscription__c/fields/Service_State__c.field-meta.xml
<CustomField>
    <fullName>Service_State__c</fullName>
    <formula>Utility_Account_Subscription__r.Utility_Account_Log__r.Service_State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service State</label>
    <type>Text</type>
</CustomField>