force-app/main/default/objects/Client_Utility_Account_Subscription__c/fields/Service_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Zip_Code__c</fullName>
    <formula>Utility_Account_Subscription__r.Utility_Account_Log__r.Service_Zip_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Zip Code</label>
    <type>Text</type>
</CustomField>