force-app/main/default/objects/Client_Utility_Account_Subscription__c/fields/Shared_Solar_System__c.field-meta.xml
<CustomField>
    <fullName>Shared_Solar_System__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shared Solar System</label>
    <referenceTo>Shared_Solar_System__c</referenceTo>
    <relationshipLabel>Client Utility Account Subscriptions</relationshipLabel>
    <relationshipName>Client_Utility_Account_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>