force-app/main/default/objects/Client_Utility_Account_Subscription__c/fields/Transferring_Subsc_to_Another_UAS__c.field-meta.xml
<CustomField>
    <fullName>Transferring_Subsc_to_Another_UAS__c</fullName>
    <formula>Utility_Account_Subscription__r.Transferring_Subsc_to_Another_UAS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If checked, this subscription going to be transferred with next allocation schedule</inlineHelpText>
    <label>Transferring Subsc. to Another UAS</label>
    <type>Checkbox</type>
</CustomField>