force-app/main/default/objects/Client_Utility_Account_Subscription__c/fields/Utility_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Utility_Account_Number__c</fullName>
    <formula>Utility_Account_Subscription__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Customer&apos;s utility account number</inlineHelpText>
    <label>Utility Account Number</label>
    <type>Text</type>
</CustomField>