force-app/main/default/objects/Client_Utility_Account_Subscription__c/fields/Utility_Account_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Utility_Account_Subscription__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Related to Utility Account Subscription object, populated via code</inlineHelpText>
    <label>Utility Account Subscription</label>
    <referenceTo>Utility_Account_Subscription__c</referenceTo>
    <relationshipLabel>Client Utility Account Subscriptions</relationshipLabel>
    <relationshipName>Client_Utility_Account_Subscriptions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>